# ollama-consumer

./: Cargo.toml
src/: main.rs
